[gd_scene load_steps=50 format=3 uid="uid://5bybde5xq8dg"]

[ext_resource type="Script" uid="uid://b0c284d0x6hly" path="res://Character/Player/player.gd" id="1_8uuqx"]
[ext_resource type="Script" uid="uid://d21cix2tkc7uj" path="res://Character/camera_control.gd" id="2_7fot2"]
[ext_resource type="Script" uid="uid://22dpx8dd4fuu" path="res://Scripts/Resources/storage.gd" id="2_gr1hu"]
[ext_resource type="Script" uid="uid://dmxkbutq67sry" path="res://Scripts/Resources/character_stats.gd" id="2_hp3u7"]
[ext_resource type="Script" uid="uid://drfub0dwvw5ua" path="res://Scripts/Resources/item.gd" id="3_lbs2b"]
[ext_resource type="Resource" uid="uid://c3slmt6qt6oup" path="res://Items/hammer.tres" id="4_lbs2b"]
[ext_resource type="PackedScene" uid="uid://b05aqjfhy72fe" path="res://Scenes/hot_bar_ui.tscn" id="6_0vdjh"]
[ext_resource type="PackedScene" uid="uid://6nwjo5qp0xgi" path="res://Scenes/task_ui.tscn" id="7_c2m8c"]
[ext_resource type="Script" uid="uid://bswhcubm3gdt2" path="res://Scripts/fps_cam.gd" id="7_f4vm8"]
[ext_resource type="Shader" uid="uid://dyjspvl377a1s" path="res://ShaderMaterial/ship_ui.gdshader" id="8_4lde1"]
[ext_resource type="Script" uid="uid://cd8cfoifptibm" path="res://Character/Player/limbo_hsm.gd" id="9_psvgc"]
[ext_resource type="Script" uid="uid://lj5gpwv8jvmw" path="res://Character/Player/States/ground_default.gd" id="10_gr1hu"]
[ext_resource type="PackedScene" uid="uid://biuufe3qefg7c" path="res://Scenes/status_panel.tscn" id="10_lbs2b"]
[ext_resource type="Script" uid="uid://bd6tqx4sfrb3x" path="res://Character/Player/States/air_default.gd" id="12_4lde1"]
[ext_resource type="PackedScene" uid="uid://c33kbg5i8lyn3" path="res://Autoloads/command_prompt.tscn" id="12_f4vm8"]
[ext_resource type="PackedScene" uid="uid://bbddso8w0pbnd" path="res://Character/Employee/repair_employee_ver_3.tscn" id="12_psvgc"]
[ext_resource type="Script" uid="uid://gbty1i13mpvv" path="res://Character/Player/States/ground_action.gd" id="13_psvgc"]
[ext_resource type="PackedScene" uid="uid://cf7umslr34082" path="res://Robotic/scanner_hud.tscn" id="18_wrpkx"]

[sub_resource type="Resource" id="Resource_4lde1"]
script = ExtResource("2_gr1hu")
slots = Array[ExtResource("3_lbs2b")]([ExtResource("4_lbs2b"), null, null, null, null, null, null, null, null, null])
metadata/_custom_type_script = "uid://22dpx8dd4fuu"

[sub_resource type="Resource" id="Resource_f4vm8"]
script = ExtResource("2_hp3u7")
speed = 5.0
metadata/_custom_type_script = "uid://dmxkbutq67sry"

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_7fot2"]
radius = 0.29875
height = 1.69555

[sub_resource type="ShaderMaterial" id="ShaderMaterial_f4vm8"]
render_priority = 0
shader = ExtResource("8_4lde1")
shader_parameter/base_color = Color(0, 1, 0, 1)
shader_parameter/scan_color = Color(1, 0.2, 0, 0.8)
shader_parameter/scanline_speed = 4.0
shader_parameter/scanline_density = 150.0
shader_parameter/fresnel_power = 5.0
shader_parameter/alpha_intensity = 0.9
shader_parameter/is_scanned = false

[sub_resource type="PlaneMesh" id="PlaneMesh_wrpkx"]
material = SubResource("ShaderMaterial_f4vm8")

[sub_resource type="AnimationNodeBlend2" id="AnimationNodeBlend2_hp3u7"]
filter_enabled = true
filters = ["rig_001/Skeleton3D:DEF-foot.L", "rig_001/Skeleton3D:DEF-foot.R", "rig_001/Skeleton3D:DEF-pelvis.L", "rig_001/Skeleton3D:DEF-pelvis.R", "rig_001/Skeleton3D:DEF-shin.L", "rig_001/Skeleton3D:DEF-shin.L.001", "rig_001/Skeleton3D:DEF-shin.R", "rig_001/Skeleton3D:DEF-shin.R.001", "rig_001/Skeleton3D:DEF-thigh.L", "rig_001/Skeleton3D:DEF-thigh.L.001", "rig_001/Skeleton3D:DEF-thigh.R", "rig_001/Skeleton3D:DEF-thigh.R.001", "rig_001/Skeleton3D:DEF-toe.L", "rig_001/Skeleton3D:DEF-toe.R"]

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_hp3u7"]
animation = &"Interact_Powercell_Short"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_lbs2b"]
animation = &"Hammer_Action"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_4lde1"]
animation = &"Idle"

[sub_resource type="AnimationNodeOneShot" id="AnimationNodeOneShot_f4vm8"]
filter_enabled = true
filters = ["rig_001/Skeleton3D:DEF-f_index.01.R", "rig_001/Skeleton3D:DEF-f_index.02.R", "rig_001/Skeleton3D:DEF-f_index.03.R", "rig_001/Skeleton3D:DEF-f_middle.01.R", "rig_001/Skeleton3D:DEF-f_middle.02.R", "rig_001/Skeleton3D:DEF-f_middle.03.R", "rig_001/Skeleton3D:DEF-f_pinky.01.R", "rig_001/Skeleton3D:DEF-f_pinky.02.R", "rig_001/Skeleton3D:DEF-f_pinky.03.R", "rig_001/Skeleton3D:DEF-f_ring.01.R", "rig_001/Skeleton3D:DEF-f_ring.02.R", "rig_001/Skeleton3D:DEF-f_ring.03.R", "rig_001/Skeleton3D:DEF-forearm.R", "rig_001/Skeleton3D:DEF-forearm.R.001", "rig_001/Skeleton3D:DEF-hand.R", "rig_001/Skeleton3D:DEF-palm.02.R", "rig_001/Skeleton3D:DEF-palm.03.R", "rig_001/Skeleton3D:DEF-palm.04.R", "rig_001/Skeleton3D:DEF-thumb.01.R", "rig_001/Skeleton3D:DEF-thumb.02.R", "rig_001/Skeleton3D:DEF-thumb.03.R", "rig_001/Skeleton3D:DEF-upper_arm.R", "rig_001/Skeleton3D:DEF-upper_arm.R.001"]

[sub_resource type="AnimationNodeOneShot" id="AnimationNodeOneShot_wrpkx"]
filter_enabled = true
filters = ["rig_001/Skeleton3D:DEF-f_index.01.R", "rig_001/Skeleton3D:DEF-f_index.02.R", "rig_001/Skeleton3D:DEF-f_index.03.R", "rig_001/Skeleton3D:DEF-f_middle.01.R", "rig_001/Skeleton3D:DEF-f_middle.02.R", "rig_001/Skeleton3D:DEF-f_middle.03.R", "rig_001/Skeleton3D:DEF-f_pinky.01.R", "rig_001/Skeleton3D:DEF-f_pinky.02.R", "rig_001/Skeleton3D:DEF-f_pinky.03.R", "rig_001/Skeleton3D:DEF-f_ring.01.R", "rig_001/Skeleton3D:DEF-f_ring.02.R", "rig_001/Skeleton3D:DEF-f_ring.03.R", "rig_001/Skeleton3D:DEF-forearm.R", "rig_001/Skeleton3D:DEF-forearm.R.001", "rig_001/Skeleton3D:DEF-hand.R", "rig_001/Skeleton3D:DEF-palm.02.R", "rig_001/Skeleton3D:DEF-palm.03.R", "rig_001/Skeleton3D:DEF-palm.04.R", "rig_001/Skeleton3D:DEF-thumb.01.R", "rig_001/Skeleton3D:DEF-thumb.02.R", "rig_001/Skeleton3D:DEF-thumb.03.R", "rig_001/Skeleton3D:DEF-upper_arm.R", "rig_001/Skeleton3D:DEF-upper_arm.R.001"]

[sub_resource type="AnimationNodeBlendTree" id="AnimationNodeBlendTree_tclw8"]
graph_offset = Vector2(-630.779, 146.876)
nodes/output/position = Vector2(220, 160)
nodes/Animation/node = SubResource("AnimationNodeAnimation_lbs2b")
nodes/Animation/position = Vector2(-580, 260)
"nodes/Animation 2/node" = SubResource("AnimationNodeAnimation_hp3u7")
"nodes/Animation 2/position" = Vector2(-580, 520)
nodes/Default/node = SubResource("AnimationNodeAnimation_4lde1")
nodes/Default/position = Vector2(-580, 780)
nodes/ExtractPowerCell/node = SubResource("AnimationNodeOneShot_f4vm8")
nodes/ExtractPowerCell/position = Vector2(-20, 160)
nodes/Hammer/node = SubResource("AnimationNodeOneShot_wrpkx")
nodes/Hammer/position = Vector2(-260, 200)
node_connections = [&"output", 0, &"ExtractPowerCell", &"ExtractPowerCell", 0, &"Hammer", &"ExtractPowerCell", 1, &"Animation 2", &"Hammer", 0, &"Default", &"Hammer", 1, &"Animation"]

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_psvgc"]
animation = &"Holding_Tool_Idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_gr1hu"]
animation = &"Idle"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_4lde1"]
advance_mode = 2
advance_expression = "is_holding"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_f4vm8"]
advance_mode = 2
advance_expression = "!is_holding"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_o80jl"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_2rq38"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_v85y2"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_fi5e4"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_wrpkx"]
states/HandAction/node = SubResource("AnimationNodeBlendTree_tclw8")
states/HandAction/position = Vector2(508, 215)
states/Holding_Tool_Idle/node = SubResource("AnimationNodeAnimation_psvgc")
states/Holding_Tool_Idle/position = Vector2(654, 100)
states/Idle/node = SubResource("AnimationNodeAnimation_gr1hu")
states/Idle/position = Vector2(389, 100)
transitions = ["Idle", "Holding_Tool_Idle", SubResource("AnimationNodeStateMachineTransition_4lde1"), "Holding_Tool_Idle", "Idle", SubResource("AnimationNodeStateMachineTransition_f4vm8"), "Idle", "HandAction", SubResource("AnimationNodeStateMachineTransition_o80jl"), "Holding_Tool_Idle", "HandAction", SubResource("AnimationNodeStateMachineTransition_2rq38"), "HandAction", "Idle", SubResource("AnimationNodeStateMachineTransition_v85y2"), "Start", "Idle", SubResource("AnimationNodeStateMachineTransition_fi5e4")]
graph_offset = Vector2(0, 18.567911)

[sub_resource type="AnimationNodeOneShot" id="AnimationNodeOneShot_tclw8"]

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_tclw8"]
animation = &"Walk_left"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_o80jl"]
animation = &"Walk"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_2rq38"]
animation = &"Walk_right"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_v85y2"]
animation = &"Walk_backward"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_fi5e4"]
animation = &"Idle"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_c11gr"]
blend_point_0/node = SubResource("AnimationNodeAnimation_tclw8")
blend_point_0/pos = Vector2(-1, 0)
blend_point_1/node = SubResource("AnimationNodeAnimation_o80jl")
blend_point_1/pos = Vector2(0, 1)
blend_point_2/node = SubResource("AnimationNodeAnimation_2rq38")
blend_point_2/pos = Vector2(1, 0)
blend_point_3/node = SubResource("AnimationNodeAnimation_v85y2")
blend_point_3/pos = Vector2(0, -1)
blend_point_4/node = SubResource("AnimationNodeAnimation_fi5e4")
blend_point_4/pos = Vector2(0, 0)

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_c11gr"]
animation = &"Open_case"

[sub_resource type="AnimationNodeBlendTree" id="AnimationNodeBlendTree_p05i7"]
graph_offset = Vector2(-322.24683, -14.439613)
nodes/output/position = Vector2(600, 140)
nodes/Blend2/node = SubResource("AnimationNodeBlend2_hp3u7")
nodes/Blend2/position = Vector2(20, 120)
nodes/Hand/node = SubResource("AnimationNodeStateMachine_wrpkx")
nodes/Hand/position = Vector2(-360, 60)
nodes/Movement/node = SubResource("AnimationNodeBlendSpace2D_c11gr")
nodes/Movement/position = Vector2(-360, 260)
nodes/InteractShot/node = SubResource("AnimationNodeOneShot_tclw8")
nodes/InteractShot/position = Vector2(280, 380)
nodes/Open_case/node = SubResource("AnimationNodeAnimation_c11gr")
nodes/Open_case/position = Vector2(20, 380)
node_connections = [&"output", 0, &"InteractShot", &"Blend2", 0, &"Hand", &"Blend2", 1, &"Movement", &"InteractShot", 0, &"Blend2", &"InteractShot", 1, &"Open_case"]

[sub_resource type="BlackboardPlan" id="BlackboardPlan_wrpkx"]

[node name="Player_Controller" type="CharacterBody3D" node_paths=PackedStringArray("fps_cam", "look_ray", "pointer_label", "camera_controller_anchor", "ani")]
collision_layer = 2
script = ExtResource("1_8uuqx")
inventory = SubResource("Resource_4lde1")
fps_cam = NodePath("Neck/FPSCam")
look_ray = NodePath("Neck/FPSCam/LookRay")
pointer_label = NodePath("Control/Label")
camera_controller_anchor = NodePath("CameraControllerAnchor")
ani = NodePath("RepairEmployeeVer3/AnimationPlayer")
limbo_path = NodePath("LimboHSM")
stat = SubResource("Resource_f4vm8")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.139831, 0)
shape = SubResource("CapsuleShape3D_7fot2")

[node name="Neck" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.39969057, -0.008476436)
top_level = true
script = ExtResource("2_7fot2")

[node name="FPSCam" type="Camera3D" parent="Neck"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.13910362, -0.09281194)
fov = 110.0
script = ExtResource("7_f4vm8")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Neck/FPSCam"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, -0.1)
visible = false
mesh = SubResource("PlaneMesh_wrpkx")

[node name="ArmMarker" type="Marker3D" parent="Neck/FPSCam"]
transform = Transform3D(0.85314137, -0.5216798, 0, 0.5216798, 0.85314137, 0, 0, 0, 1, -0.0009954274, -0.0021597147, -0.62500906)

[node name="LookRay" type="RayCast3D" parent="Neck/FPSCam"]
target_position = Vector3(0, 0, -6.38)
collision_mask = 20
collide_with_areas = true

[node name="SpotLight3D" type="SpotLight3D" parent="Neck/FPSCam"]
spot_range = 15.0

[node name="CarryMarker" type="Marker3D" parent="Neck"]
transform = Transform3D(0.937233, 0.348703, 0, -0.348703, 0.937233, 0, 0, 0, 1, 0, -0.368275, -0.276035)

[node name="CameraControllerAnchor" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.53807116, -0.127882)

[node name="AnimationTree" type="AnimationTree" parent="."]
root_node = NodePath("../RepairEmployeeVer3")
tree_root = SubResource("AnimationNodeBlendTree_p05i7")
advance_expression_base_node = NodePath("../LimboHSM")
anim_player = NodePath("../RepairEmployeeVer3/AnimationPlayer")
parameters/Blend2/blend_amount = 1.0
parameters/Hand/HandAction/ExtractPowerCell/active = false
parameters/Hand/HandAction/ExtractPowerCell/internal_active = false
parameters/Hand/HandAction/ExtractPowerCell/request = 0
parameters/Hand/HandAction/Hammer/active = false
parameters/Hand/HandAction/Hammer/internal_active = false
parameters/Hand/HandAction/Hammer/request = 0
parameters/Movement/blend_position = Vector2(0.0015949, 0)
parameters/InteractShot/active = false
parameters/InteractShot/internal_active = false
parameters/InteractShot/request = 0

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
metadata/_edit_use_anchors_ = true

[node name="HBoxContainer" parent="Control" instance=ExtResource("6_0vdjh")]
layout_mode = 1
offset_left = -350.0
offset_top = -70.0
offset_right = 350.0
alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 20
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="TaskUI" parent="Control" instance=ExtResource("7_c2m8c")]
layout_mode = 0
anchors_preset = 0
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 0.0
offset_top = 0.0
offset_right = 250.0
offset_bottom = 300.0
grow_horizontal = 1
grow_vertical = 1
mouse_filter = 2
metadata/_edit_use_anchors_ = true

[node name="StatusPanel" parent="Control" instance=ExtResource("10_lbs2b")]
layout_mode = 1
metadata/_edit_use_anchors_ = true

[node name="CommandPrompt" parent="Control" instance=ExtResource("12_f4vm8")]

[node name="LimboHSM" type="LimboHSM" parent="." node_paths=PackedStringArray("ground_default", "air_default")]
update_mode = 2
blackboard_plan = SubResource("BlackboardPlan_wrpkx")
script = ExtResource("9_psvgc")
ground_default = NodePath("GroundDefault")
air_default = NodePath("AirDefault")

[node name="GroundDefault" type="LimboState" parent="LimboHSM"]
script = ExtResource("10_gr1hu")
can_default = false
use_default_ani = false

[node name="AirDefault" type="LimboState" parent="LimboHSM"]
script = ExtResource("12_4lde1")
can_default = false
use_default_ani = false

[node name="GroundAction" type="LimboState" parent="LimboHSM"]
script = ExtResource("13_psvgc")
use_default_ani = false

[node name="RepairEmployeeVer3" parent="." instance=ExtResource("12_psvgc")]
transform = Transform3D(-1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, 0, -1.00199, 0)

[node name="Skeleton3D" parent="RepairEmployeeVer3/rig_001" index="0"]
bones/0/position = Vector3(-1.0307905e-14, 0.87582916, -0.046697844)
bones/0/rotation = Quaternion(0.1258196, 1.1826192e-07, 1.499882e-08, 0.99205315)
bones/2/rotation = Quaternion(-0.09141701, -2.3742028e-07, -2.179547e-08, 0.9958127)
bones/3/rotation = Quaternion(0.0016272285, 1.17252014e-07, 2.151345e-08, 0.9999987)
bones/4/rotation = Quaternion(0.20173757, 4.2221285e-15, 7.356516e-16, 0.9794396)
bones/5/rotation = Quaternion(-0.09485732, -5.3833382e-15, -2.4184884e-16, 0.99549097)
bones/6/rotation = Quaternion(-0.09371213, 2.2004751e-15, 6.071576e-17, 0.9955994)
bones/7/position = Vector3(2.6384669e-08, 0.8758292, -0.04669784)
bones/7/rotation = Quaternion(-0.08636767, -0.75110424, -0.38305163, 0.5307113)
bones/8/position = Vector3(-4.6244022e-08, 0.8758292, -0.04669782)
bones/8/rotation = Quaternion(-0.086367615, 0.7511043, 0.3830517, 0.53071123)
bones/9/position = Vector3(0.08290556, 0.928364, -0.010490121)
bones/9/rotation = Quaternion(0.96115357, 0.021797076, -0.27422738, 0.022543292)
bones/9/scale = Vector3(0.9999872, 1.000026, 0.9999872)
bones/10/rotation = Quaternion(-3.483244e-08, -0.00032938365, -4.0942464e-08, 0.99999994)
bones/10/scale = Vector3(1.0000005, 0.9999993, 1.0000005)
bones/11/rotation = Quaternion(0.051746964, -0.0003298753, 4.3451305e-06, 0.99866027)
bones/11/scale = Vector3(0.9999995, 1.0000004, 0.9999999)
bones/12/rotation = Quaternion(2.6166589e-08, 0.00038492083, 7.4138686e-09, 1)
bones/13/rotation = Quaternion(-0.48952892, 0.23763761, 0.13968329, 0.8272717)
bones/13/scale = Vector3(1.0000087, 1.0000025, 0.99998915)
bones/14/rotation = Quaternion(0.00016121978, 0.96124834, -0.27568343, 0.000562645)
bones/14/scale = Vector3(1.0000004, 0.99999946, 1)
bones/15/position = Vector3(-0.08290554, 0.9283642, -0.010490141)
bones/15/rotation = Quaternion(0.96114874, -0.021842254, 0.27422163, 0.02277261)
bones/15/scale = Vector3(0.9999935, 1.0000126, 0.9999935)
bones/16/rotation = Quaternion(2.0492179e-08, 1.8602216e-06, -2.094642e-08, 1)
bones/17/rotation = Quaternion(0.05176259, 1.7299546e-06, -4.8750003e-08, 0.9986595)
bones/17/scale = Vector3(1.0000006, 0.99999946, 1.0000001)
bones/18/rotation = Quaternion(-4.3914085e-08, -2.638457e-05, -6.3563124e-09, 1)
bones/19/rotation = Quaternion(-0.48958686, -0.23728701, -0.13966997, 0.8273402)
bones/19/scale = Vector3(1.0000056, 1.0000029, 0.9999917)
bones/20/rotation = Quaternion(-0.00016134934, 0.96124864, -0.2756824, -0.0005625777)
bones/20/scale = Vector3(0.9999996, 1.0000005, 0.99999994)
bones/21/position = Vector3(8.987e-23, 1.5069352, 0.020895522)
bones/22/position = Vector3(0.0154813435, 1.3578745, 0.03759396)
bones/22/rotation = Quaternion(-0.61037695, -0.36456656, -0.37467688, 0.5951038)
bones/23/position = Vector3(0.13621843, 1.3252685, -0.022587638)
bones/23/rotation = Quaternion(-0.082448654, -0.09911092, 0.9812343, -0.14338218)
bones/23/scale = Vector3(1.0102847, 0.9797433, 1.0102847)
bones/24/rotation = Quaternion(-7.080453e-10, 0.024215534, -2.4245605e-07, 0.99970675)
bones/25/rotation = Quaternion(0.34575754, 0.024068765, -0.008789063, 0.93797404)
bones/25/scale = Vector3(1.0014931, 0.98443544, 1.014762)
bones/26/rotation = Quaternion(-3.2582186e-08, -0.038263537, 3.3587872e-07, 0.9992677)
bones/27/rotation = Quaternion(0.06507108, -0.03821257, -0.07687171, 0.9941812)
bones/27/scale = Vector3(0.98923695, 1.0223308, 0.9888943)
bones/28/rotation = Quaternion(-0.038093064, 0.47694215, -0.084440544, 0.8740395)
bones/29/rotation = Quaternion(0.18755941, -0.00087427243, 0.0045779753, 0.9822422)
bones/31/rotation = Quaternion(0.07116514, 0.93044585, 0.16728438, 0.318154)
bones/32/rotation = Quaternion(0.16337746, -0.002753969, 0.016628273, 0.9864197)
bones/33/rotation = Quaternion(-0.0055684377, -5.722056e-05, -0.043963537, 0.9990177)
bones/35/rotation = Quaternion(0.06794356, 0.46776396, -0.1483533, 0.868661)
bones/36/rotation = Quaternion(0.1465347, -0.0013117669, 0.008853248, 0.98916507)
bones/37/rotation = Quaternion(0.057350334, 0.00021444584, -0.021602958, 0.99812037)
bones/37/scale = Vector3(1.0000001, 1.000009, 1)
bones/39/rotation = Quaternion(0.12598993, 0.56488246, -0.17062461, 0.7974469)
bones/40/rotation = Quaternion(0.058728043, 0.0016135335, -0.027516725, 0.9978934)
bones/43/rotation = Quaternion(0.054175097, 0.4668204, -0.20797507, 0.8578404)
bones/44/rotation = Quaternion(0.22012298, -0.0011356563, 0.0050373157, 0.9754585)
bones/47/position = Vector3(-0.0154813435, 1.3578745, 0.03759396)
bones/47/rotation = Quaternion(-0.61037695, 0.36456656, 0.37467688, 0.5951038)
bones/48/position = Vector3(-0.13621846, 1.3252689, -0.022587648)
bones/48/rotation = Quaternion(0.2169842, 0.19809717, 0.8616909, 0.4137201)
bones/48/scale = Vector3(1.0194939, 0.9621233, 1.019494)
bones/49/rotation = Quaternion(2.2432948e-07, 0.08681514, -1.134318e-06, 0.9962245)
bones/50/rotation = Quaternion(0.54858154, 0.08565214, -0.0570593, 0.82973874)
bones/50/scale = Vector3(1.0020669, 0.94852686, 1.0530024)
bones/51/rotation = Quaternion(4.053148e-07, -0.11723999, -2.7912142e-07, 0.9931036)
bones/52/rotation = Quaternion(0.2764837, -0.1153315, -0.05875455, 0.9522623)
bones/52/scale = Vector3(0.9808694, 1.0250481, 0.9963587)
bones/53/rotation = Quaternion(-0.0380934, -0.4769421, 0.08444201, 0.87403935)
bones/54/rotation = Quaternion(0.40235445, 0.069471985, -0.06461333, 0.9105546)
bones/55/rotation = Quaternion(0.032530155, 0.11483941, -0.16143277, 0.9796393)
bones/56/rotation = Quaternion(-0.1964819, 0.9196977, 0.17333968, -0.2924113)
bones/57/rotation = Quaternion(0.183159, -0.38664028, -0.0481045, 0.90257865)
bones/58/rotation = Quaternion(0.012418659, 0.17896906, 0.18324773, 0.966559)
bones/60/position = Vector3(0.0037745482, 0.08197674, -0.0063315625)
bones/60/rotation = Quaternion(0.1562159, -0.45308632, 0.155595, 0.8637706)
bones/61/rotation = Quaternion(0.38705996, 0.083973505, -0.10340274, 0.91238207)
bones/62/rotation = Quaternion(0.119185224, 0.021339497, -0.27596387, 0.9535112)
bones/63/rotation = Quaternion(-0.038200166, -0.6141373, 0.065392554, 0.7855572)
bones/64/position = Vector3(-0.007372652, 0.07860239, -0.016693043)
bones/64/rotation = Quaternion(0.07671098, -0.5721428, 0.1580307, 0.8011208)
bones/65/rotation = Quaternion(0.34083343, 0.035030156, -0.15199813, 0.92709345)
bones/66/rotation = Quaternion(0.29450727, 0.01071706, -0.14645222, 0.94429994)
bones/67/rotation = Quaternion(-0.0105978185, -0.5800473, 0.16926105, 0.7967331)
bones/68/position = Vector3(-0.022648834, 0.07265132, -0.023716575)
bones/68/rotation = Quaternion(0.12651013, -0.4398244, 0.2241307, 0.8604157)
bones/69/rotation = Quaternion(0.33512217, 0.009897019, -0.042507164, 0.94116324)
bones/70/rotation = Quaternion(0.16202398, -0.0009213084, -0.038600557, 0.9860311)
bones/71/rotation = Quaternion(0.09108414, -0.55747193, 0.23076928, 0.7922589)
bones/72/position = Vector3(0.07896428, 1.2538643, -0.04102983)
bones/73/position = Vector3(-0.07896428, 1.2538643, -0.04102983)

[node name="armIK" type="SkeletonIK3D" parent="RepairEmployeeVer3/rig_001/Skeleton3D" index="2"]
transform = Transform3D(1, 0, 1.74846e-07, 0, 1, 0, -1.74846e-07, 0, 1, -3.00745e-09, 0.0121173, -0.0344012)
influence = 0.6
root_bone = &"DEF-forearm.R"
tip_bone = &"DEF-hand.R"
target_node = NodePath("../../../../Neck/FPSCam/ArmMarker")
min_distance = 0.2

[node name="HandBone" type="BoneAttachment3D" parent="RepairEmployeeVer3/rig_001/Skeleton3D" index="3"]
transform = Transform3D(-0.37238443, 0.47801653, 0.824185, 0.8703571, 0.50769687, 0.13518614, -0.31444183, 0.7467178, -0.525782, -0.2923231, 1.2129196, 0.30072296)
bone_name = "DEF-hand.R"
bone_idx = 52

[node name="Tools" type="Node3D" parent="RepairEmployeeVer3/rig_001/Skeleton3D/HandBone"]
transform = Transform3D(0.05016333, 0.47909155, 0.87633187, 0.7507102, 0.5606323, -0.34946865, -0.6587266, 0.67540205, -0.33153453, -0.042266876, 0.122520044, 0.0665214)

[node name="EyesBone" type="BoneAttachment3D" parent="RepairEmployeeVer3/rig_001/Skeleton3D" index="4"]
transform = Transform3D(1, 1.813353e-14, 1.5809181e-13, -3.9098824e-14, 0.9999995, 6.2584877e-07, -1.4433475e-13, -6.4074993e-07, 0.99999964, 6.3488748e-09, 1.506935, 0.020895448)
bone_name = "DEF-spine.006"
bone_idx = 6

[node name="CutSceneEyes" type="Marker3D" parent="RepairEmployeeVer3/rig_001/Skeleton3D/EyesBone"]
transform = Transform3D(-1, 5.4723444e-08, 1.06668665e-07, 1.0944696e-07, 0.77985173, 0.6259643, -4.8930822e-08, 0.62596434, -0.7798518, 9.213716e-09, 0.057326853, 0.10539286)

[node name="ScannerHUD" parent="." node_paths=PackedStringArray("main_camera") instance=ExtResource("18_wrpkx")]
main_camera = NodePath("../Neck/FPSCam")

[editable path="RepairEmployeeVer3"]
